[package]
name = "immutable-chunkmap"
version = "1.0.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
publish = true
description = "A fast immutable map and set with batch insert and update methods, COW operations, and big O efficient implementations of set and merge operations"
categories = ["data-structures"]
keywords = ["map", "set", "immutable", "persistent", "functional"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/immutable-chunkmap"
repository = "https://github.com/estokes/immutable-chunkmap"
edition = "2018"

[features]
default = []
serde = ["dep:serde", "packed_struct/use_serde"]

[dependencies]
arrayvec = "0.7"
packed_struct = { version = "0.10", default-features = false }
packed_struct_codegen = "0.10"
serde = { version = "1", optional = true }

[dev-dependencies]
serde = "1"
serde_json = "1"
paste = "1"
rand = "0.8"
