[package]
name = "immutable-chunkmap"
version = "2.0.7"
authors = ["Eric Stokes <letaris@gmail.com>"]
publish = true
description = "A fast immutable map and set with batch insert and update methods, COW operations, and big O efficient implementations of set and merge operations"
categories = ["data-structures", "no-std"]
keywords = ["map", "set", "immutable", "persistent", "functional"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/immutable-chunkmap"
repository = "https://github.com/estokes/immutable-chunkmap"
edition = "2018"

[features]
default = ["pool"]
serde = ["dep:serde"]
rayon = ["dep:rayon"]
pool = ["dep:fxhash"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
serde = { version = "1", default-features = false, features = [
    "alloc",
], optional = true }
rayon = { version = "1", optional = true }
fxhash = { version = "0.2", optional = true }

[dev-dependencies]
rayon = "1"
serde = "1"
serde_json = "1"
paste = "1"
rand = "0.8"
hashbrown = "0.15"
