[package]
name = "bench"
version = "0.2.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[features]
default = []
pool = ["immutable-chunkmap/pool"]

[dependencies]
smallvec = "1.0"
immutable-chunkmap = { path = "../" }
rand = ">= 0.3"
num_cpus = ">= 1.0"
arcstr = "1"
netidx-value = "0.29"
